manifests/apps/02-development/04-kanboard/00-namespace.yml
---
apiVersion: v1
kind: Namespace
metadata:
  name: kanboard
  labels:
    environment: development
