manifests/apps/02-development/04-kanboard/02-deployment.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kanboard
  namespace: kanboard
  labels:
    app: kanboard
spec:
  replicas: 1
  selector:
    matchLabels:
      app: kanboard
  template:
    metadata:
      labels:
        app: kanboard
    spec:
      containers:
      - name: kanboard
        image: kanboard/kanboard:latest
        ports:
        - containerPort: 80
          name: kanboard-http
        volumeMounts:
        - mountPath: /var/www/app/data
          name: kanboard-data
        - mountPath: /var/www/app/config.php
          name: kanboard-config
          readOnly: true
          subPath: config.php
      volumes:
      - name: kanboard-data
        hostPath:
          path: /mnt/gluster/gluster/development/kanboard/data
      - name: kanboard-config
        configMap:
          name: kanboard-configmap
          items:
            - key: config.php
              path: config.php
