manifests/apps/02-development/04-kanboard/03-deployment.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kanboard
  namespace: kanboard
  labels:
    app: kanboard
spec:
  replicas: 1
  selector:
    matchLabels:
      app: kanboard
  template:
    metadata:
      labels:
        app: kanboard
    spec:
      containers:
      - name: kanboard
        image: kanboard/kanboard:latest
        ports:
        - containerPort: 80
          name: kanboard-http
        volumeMounts:
        - mountPath: /var/www
          name: kanboard-data
      volumes:
      - name: kanboard-data
        persistentVolumeClaim:
          claimName: kanboard-pvc
