manifests/apps/02-development/04-kanboard/02-service.yml
---
kind: Service
apiVersion: v1
metadata:
  name: kanboard-service
  namespace: kanboard
spec:
  selector:
    app: kanboard
  ports:
  - name: kanboard-http
    port: 80
