manifests/apps/02-development/04-kanboard/04-ingress.yml
---
kind: Ingress
apiVersion: networking.k8s.io/v1
metadata:
  name: kanboard-ingress
  namespace: kanboard
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    nginx.ingress.kubernetes.io/auth-method: GET
    nginx.ingress.kubernetes.io/auth-url: http://authelia.authelia.svc.cluster.local/api/verify
    nginx.ingress.kubernetes.io/auth-signin: https://auth.codekernel.co.uk?rm=$request_method
    nginx.ingress.kubernetes.io/auth-response-headers: Remote-User,Remote-Name,Remote-Groups,Remote-Email
    nginx.ingress.kubernetes.io/auth-snippet: |
      proxy_set_header X-Forwarded-Method $request_method;
spec:
  rules:
  - host: kanboard.codekernel.co.uk
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: kanboard-service
            port:
              number: 80
  tls:
  - hosts:
    - kanboard.codekernel.co.uk
