manifests/apps/02-development/04-kanboard/05-ingress.yml
---
kind: Ingress
apiVersion: networking.k8s.io/v1
metadata:
  name: kanboard-ingress
  namespace: kanboard
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
spec:
  rules:
  - host: kanboard.codekernel.co.uk
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: kanboard-service
            port:
              number: 80
  tls:
  - hosts:
    - kanboard.codekernel.co.uk
